feat: :sparkles: Add new gear and trait types

--- a/lang/en.json
+++ b/lang/en.json
@@ -270,6 +270,8 @@
   "SDM.BonusHeroDicePool": "Bonus Hero Dice pool",
   "SDM.brick-bastions": "Brick Bastions",
   "SDM.BrokenItemAction": "<b>right-click</b>: repair item back to notched",
+  "SDM.Burden.CompletedSteps": "Completed Steps",
+  "SDM.Burden.StepsToCure": "Steps To Cure",
   "SDM.BurdenGenerator.AffectedAbility": "Affected Ability:",
   "SDM.BurdenGenerator.CreateButton": "Create Burden",
   "SDM.BurdenGenerator.ItemDescription": "<p><strong>Affected:</strong> {ability} ({penalty})</p>",
@@ -279,7 +281,7 @@
   "SDM.BurdenGenerator.RollResult": "Rolled: {row},{col} → “{word}”",
   "SDM.BurdenGenerator.Title": "Burden Generator",
   "SDM.BurdenGenerator.WindowTitle": "Generate Burden",
-  "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
+  "SDM.BurdensPenalty": "Each burden and affliction imposes a -1 to all rolls",
   "SDM.BurdenTable.R1C1": "break",
   "SDM.BurdenTable.R1C2": "leg",
   "SDM.BurdenTable.R1C3": "tooth",
@@ -436,9 +438,8 @@
   "SDM.CorruptionOutcome3to6": "Severe exposure.",
   "SDM.CorruptionOutcome7to10": "Moderate exposure.",
   "SDM.Cost": "Cost",
-  "SDM.CreateCorruptionItem": "Create Corruption as",
+  "SDM.CreateItemTypeAs": "Create {type} as",
   "SDM.CreateNPC": "Create NPC",
-  "SDM.CreatePowerItem": "Create Power as",
   "SDM.CreateRandomCharacter": "Character Generator",
   "SDM.CreateRandomNPC": "NPC Generator",
   "SDM.CreatureTable": "NPC Table",
@@ -524,9 +525,11 @@
   "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bonus to Thought related rolls",
   "SDM.EffectsLabel.system.abilities.tho.roll_mode": "Default roll type for thought and tho save rolls (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bonus to Thought Saving Throw",
+  "SDM.EffectsLabel.system.affliction_slots_bonus": "Number of afflictions that won't take either item or trait slots",
   "SDM.EffectsLabel.system.all_save_bonus": "Bonus to all saving throw rolls",
   "SDM.EffectsLabel.system.armor_bonus": "Armor Bonus",
   "SDM.EffectsLabel.system.attack_bonus": "All attack bonus",
+  "SDM.EffectsLabel.system.augment_slots_bonus": "Number of augments that won't take either item or trait slots",
   "SDM.EffectsLabel.system.base_damage_multiplier": "Starting damage multiplier value for critical hits",
   "SDM.EffectsLabel.system.blood_dice.bonus": "Extra blood dice (increases the max number of blood dice)",
   "SDM.EffectsLabel.system.blood_dice.dice_type": "Blood dice type, override with: (d4, d6, d8, d10, d12 or d20)",
@@ -551,6 +554,7 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "Oldtech attack bonus",
   "SDM.EffectsLabel.system.oldtech.roll_mode": "Default roll type for oldtech attacks (override with: advantage or disadvantage)",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of packade items (not readied items) that won't take item slots",
+  "SDM.EffectsLabel.system.pet_slots_bonus": "Number of pets that won't take either item or trait slots",
   "SDM.EffectsLabel.system.power_cost": "Power Cost",
   "SDM.EffectsLabel.system.power_cost_bonus": "Bonus value (positive number) deducted from all powers total cost",
   "SDM.EffectsLabel.system.power_slots_bonus": "Number of powers that won't take either item or trait slots",
@@ -781,12 +785,15 @@
   "SDM.ItemFeature.burdening": "burdening",
   "SDM.ItemFeature.burdeningAbbr": "burdening",
   "SDM.ItemFeature.burdeningDescription": "A hit imposes a burden on the target. They suffer a -1 to all subsequent rolls",
+  "SDM.ItemFeature.burn": "burn mode",
+  "SDM.ItemFeature.burnAbbr": "burn",
+  "SDM.ItemFeature.burnDescription": "As free action, you can activate a golem's burn mode for the rest of the scene by making a d20 usage roll (replenish score)",
   "SDM.ItemFeature.burst": "burst",
   "SDM.ItemFeature.burstAbbr": "burst",
-  "SDM.ItemFeature.burstDescription": "Unload all your ammo to deal damage in a small area. Targets can take cover and forfeit their next move for half damage. Targets already under cover take no damage if they forfeit their next move.",
+  "SDM.ItemFeature.burstDescription": "Unload all your ammo to deal damage in a small area. Targets can take cover and forfeit their next move for half damage. Targets already under cover take no damage if they forfeit their next move",
   "SDM.ItemFeature.camolion": "camolion",
   "SDM.ItemFeature.camolionAbbr": "camo",
-  "SDM.ItemFeature.camolionDescription": "Like that scaly, color-changing lion of legend, this armor adjusts itself to help you hide.",
+  "SDM.ItemFeature.camolionDescription": "Like that scaly, color-changing lion of legend, this armor adjusts itself to help you hide",
   "SDM.ItemFeature.cavalry": "cavalry",
   "SDM.ItemFeature.cavalryAbbr": "cavalry",
   "SDM.ItemFeature.cavalryDescription": "One-handed weapon for use with a steed. Deals double damage when charging",
@@ -804,7 +811,7 @@
   "SDM.ItemFeature.confusingDescription": "Target is confused, suffering a penalty to its actions for one round",
   "SDM.ItemFeature.cool": "cool",
   "SDM.ItemFeature.coolAbbr": "cool",
-  "SDM.ItemFeature.coolDescription": "Looks good in the sun, but a thermal blanket is recommended at night because it gets chilly.",
+  "SDM.ItemFeature.coolDescription": "Looks good in the sun, but a thermal blanket is recommended at night because it gets chilly",
   "SDM.ItemFeature.corpsefed": "corpsefed",
   "SDM.ItemFeature.corpsefedAbbr": "corpsefed",
   "SDM.ItemFeature.corpsefedDescription": "Double bonus for an hour after it eats",
@@ -834,10 +841,10 @@
   "SDM.ItemFeature.fantascienceDescription": "Gifts of the Logos unbound; use charisma for their attack rolls",
   "SDM.ItemFeature.fearsome": "fearsome",
   "SDM.ItemFeature.fearsomeAbbr": "fearsome",
-  "SDM.ItemFeature.fearsomeDescription": "Makes animals howl in fear and forces humans to roll a morale test.",
+  "SDM.ItemFeature.fearsomeDescription": "Makes animals howl in fear and forces humans to roll a morale test",
   "SDM.ItemFeature.flare": "flare #",
-  "SDM.ItemFeature.flareAbbr": "flare",
-  "SDM.ItemFeature.flareDescription": "Dissipate damage in excess of the flare number. Good against one attack per round.",
+  "SDM.ItemFeature.flareAbbr": "flare #",
+  "SDM.ItemFeature.flareDescription": "Dissipate damage in excess of the flare number. Good against one attack per round",
   "SDM.ItemFeature.frag": "frag",
   "SDM.ItemFeature.fragAbbr": "frag",
   "SDM.ItemFeature.fragDescription": "Its epic energies make slain enemies explode and deal (d) damage in a small area",
@@ -864,7 +871,7 @@
   "SDM.ItemFeature.interfacingDescription": "Allows direct neural control of secondary systems, such as artillery or colossal golems",
   "SDM.ItemFeature.intravenous": "intravenous",
   "SDM.ItemFeature.intravenousAbbr": "intra",
-  "SDM.ItemFeature.intravenousDescription": "Inject potions as a free action. Doff the armor slowly and carefully.",
+  "SDM.ItemFeature.intravenousDescription": "Inject potions as a free action. Doff the armor slowly and carefully",
   "SDM.ItemFeature.jade": "jade",
   "SDM.ItemFeature.jadeAbbr": "jade",
   "SDM.ItemFeature.jadeDescription": "Grants ward bonus against ghosts and spirits",
@@ -899,7 +906,7 @@
   "SDM.ItemFeature.petrifyingAbbr": "petrifying",
   "SDM.ItemFeature.petrifyingDescription": "Makes the target feel as though they have been turned to stone. Save allowed",
   "SDM.ItemFeature.pocket": "pocket #",
-  "SDM.ItemFeature.pocketAbbr": "pocket",
+  "SDM.ItemFeature.pocketAbbr": "pocket #",
   "SDM.ItemFeature.pocketDescription": "A secret pocket, that is. Hides # soaps",
   "SDM.ItemFeature.powered": "powered",
   "SDM.ItemFeature.poweredAbbr": "powered",
@@ -913,9 +920,9 @@
   "SDM.ItemFeature.reach": "reach",
   "SDM.ItemFeature.reachAbbr": "reach",
   "SDM.ItemFeature.reachDescription": "Longer, so it attacks first in close combat",
-  "SDM.ItemFeature.replenish": "replenish",
-  "SDM.ItemFeature.replenishAbbr": "re",
-  "SDM.ItemFeature.replenishDescription": "Abstracts the number of bullets or other resources. When you roll the replenish score or less, resources run out",
+  "SDM.ItemFeature.replenish": "replenish #",
+  "SDM.ItemFeature.replenishAbbr": "re #",
+  "SDM.ItemFeature.replenishDescription": "Abstracts the number of bullets or other resources. When you roll the replenish score or less on a usage roll, resources run out",
   "SDM.ItemFeature.restricted": "restricted",
   "SDM.ItemFeature.restrictedAbbr": "restricted",
   "SDM.ItemFeature.restrictedDescription": "Hard to find, overpriced, offen illegal. Zombies are such a thing",
@@ -924,7 +931,7 @@
   "SDM.ItemFeature.scaryDescription": "Applies ward bonus to foes' morale",
   "SDM.ItemFeature.semi_sentient": "semi sentient",
   "SDM.ItemFeature.semi_sentientAbbr": "sentient",
-  "SDM.ItemFeature.semi_sentientDescription": "This weapon can follow simple instructions and attack on its own. Set it up on a powered swivel mount for best effect.",
+  "SDM.ItemFeature.semi_sentientDescription": "This weapon can follow simple instructions and attack on its own. Set it up on a powered swivel mount for best effect",
   "SDM.ItemFeature.silent": "silent",
   "SDM.ItemFeature.silentAbbr": "silent",
   "SDM.ItemFeature.silentDescription": "This weapon makes no sound",
@@ -957,7 +964,7 @@
   "SDM.ItemFeature.throwingDescription": "Designed for throwing. Fine at short range, but suffers a penalty at longer ranges",
   "SDM.ItemFeature.two_handed": "two handed",
   "SDM.ItemFeature.two_handedAbbr": "2H",
-  "SDM.ItemFeature.two_handedDescription": "Needs two hands to use properly. Big weapons (2+ st) are usually two-handed.",
+  "SDM.ItemFeature.two_handedDescription": "Needs two hands to use properly. Big weapons (2+ st) are usually two-handed",
   "SDM.ItemFeature.undreaming": "undreaming",
   "SDM.ItemFeature.undreamingAbbr": "undreaming",
   "SDM.ItemFeature.undreamingDescription": "Spend 1d4 life to look past illusions",
@@ -972,7 +979,7 @@
   "SDM.ItemFeature.vitalDescription": "This weapon drains the user of 1 life (or more) each time it is used",
   "SDM.ItemFeature.vorpal": "vorpal",
   "SDM.ItemFeature.vorpalAbbr": "vorpal",
-  "SDM.ItemFeature.vorpalDescription": "Decapitating, bisecting, truncating on a natural 20 (or other specified natural roll). Turns one target into two ex-targets.",
+  "SDM.ItemFeature.vorpalDescription": "Decapitating, bisecting, truncating on a natural 20 (or other specified natural roll). Turns one target into two ex-targets",
   "SDM.ItemFeature.watchful": "watchful",
   "SDM.ItemFeature.watchfulAbbr": "watchful",
   "SDM.ItemFeature.watchfulDescription": "Keeps an eye on you. Like an alarm",
@@ -1144,6 +1151,8 @@
   "SDM.Notes": "Notes",
   "SDM.NpcCr": "CR",
   "SDM.NPCCreated": "Random NPC {name}, level: {level} was created! ",
+  "SDM.NPCLevelUp": "{name} advanced to level {level}!",
+  "SDM.NPCLevelUpLimit": "{name} cannot advance past level {level}",
   "SDM.NPCTraitAdaptable": "Adaptable. Copy an enemy's last used special ability.",
   "SDM.NPCTraitBonded": "Bonded. Spend life to grant an ally an equal bonus on their next roll.",
   "SDM.NPCTraitCharger": "Charger. Double damage after a direct charge.",
@@ -1716,12 +1725,15 @@
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
   "TYPES.Actor.npc": "NPC",
+  "TYPES.Item.affliction": "Affliction",
   "TYPES.Item.armor": "Armor",
+  "TYPES.Item.augment": "Augment",
   "TYPES.Item.burden": "Burden",
   "TYPES.Item.cash": "Cash",
   "TYPES.Item.corruption": "Corruption",
   "TYPES.Item.gear": "Gear",
   "TYPES.Item.mount": "Mount",
+  "TYPES.Item.pet": "Pet",
   "TYPES.Item.power": "Power",
   "TYPES.Item.power_album": "Album of Power",
   "TYPES.Item.skill": "Skill",
