--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -436,9 +436,8 @@
   "SDM.CorruptionOutcome3to6": "Exposição severa.",
   "SDM.CorruptionOutcome7to10": "Exposição moderada.",
   "SDM.Cost": "Custo",
-  "SDM.CreateCorruptionItem": "Criar Corrupção como",
+  "SDM.CreateItemTypeAs": "Create {type} as",
   "SDM.CreateNPC": "Criar NPC",
-  "SDM.CreatePowerItem": "Criar Poder como",
   "SDM.CreateRandomCharacter": "Gerar Personagem",
   "SDM.CreateRandomNPC": "Gerar NPC",
   "SDM.CreatureTable": "Tabela de NPCs",
@@ -524,9 +523,11 @@
   "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bônus em testes relacionados a Inteligência",
   "SDM.EffectsLabel.system.abilities.tho.roll_mode": "Tipo de rolagem padrão para inteligência e salvaguarda de int (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bônus para Salvaguarda de Inteligência",
+  "SDM.EffectsLabel.system.affliction_slots_bonus": "Number of afflictions that won't take either item or trait slots",
   "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
   "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
   "SDM.EffectsLabel.system.attack_bonus": "Bônus para todos os ataques",
+  "SDM.EffectsLabel.system.augment_slots_bonus": "Number of augments that won't take either item or trait slots",
   "SDM.EffectsLabel.system.base_damage_multiplier": "Valor inicial do multiplicador de dado para acertos críticos",
   "SDM.EffectsLabel.system.blood_dice.bonus": "Dados de sangue extras (aumenta o número máximo de dados de sangue)",
   "SDM.EffectsLabel.system.blood_dice.dice_type": "Tipo de dado de sangue, substituir por: (d4, d6, d8, d10, d12 ou d20)",
@@ -551,6 +552,7 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "Bônus de ataque com velhatec",
   "SDM.EffectsLabel.system.oldtech.roll_mode": "Tipo de rolagem padrão para ataques de velhatec (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Número de itens empacotados (não equipados) que não ocupam espaços",
+  "SDM.EffectsLabel.system.pet_slots_bonus": "Number of pets that won't take either item or trait slots",
   "SDM.EffectsLabel.system.power_cost": "Custo de poderes",
   "SDM.EffectsLabel.system.power_cost_bonus": "Valor do bônus (número positivo) deduzido do custo total de todos os poderes",
   "SDM.EffectsLabel.system.power_slots_bonus": "Número de poderes que não ocupam espaços de itens ou traços",
@@ -781,6 +783,9 @@
   "SDM.ItemFeature.burdening": "oneroso",
   "SDM.ItemFeature.burdeningAbbr": "oneroso",
   "SDM.ItemFeature.burdeningDescription": "Um acerto impõe um fardo ao alvo. Eles sofrem -1 em todas as rolagens subsequentes",
+  "SDM.ItemFeature.burn": "modo de queima",
+  "SDM.ItemFeature.burnAbbr": "queima",
+  "SDM.ItemFeature.burnDescription": "Como uma ação livre, você pode ativar o modo de queima do golem pelo restante da cena realizando uma rolagem de uso (d20, valor de recarga)",
   "SDM.ItemFeature.burst": "rajada",
   "SDM.ItemFeature.burstAbbr": "rajada",
   "SDM.ItemFeature.burstDescription": "Descarregue toda sua munição para causar dano em uma pequena área. Alvos podem se cobrir e abrir mão do próximo movimento para sofrer metade do dano. Alvos já cobertos não sofrem dano se abrirem mão do próximo movimento.",
@@ -835,8 +840,8 @@
   "SDM.ItemFeature.fearsome": "temível",
   "SDM.ItemFeature.fearsomeAbbr": "temível",
   "SDM.ItemFeature.fearsomeDescription": "Faz animais uivarem de medo e força humanos a fazer um teste de moral.",
-  "SDM.ItemFeature.flare": "clarão",
-  "SDM.ItemFeature.flareAbbr": "clarão",
+  "SDM.ItemFeature.flare": "clarão #",
+  "SDM.ItemFeature.flareAbbr": "clarão #",
   "SDM.ItemFeature.flareDescription": "Dissipa dano em excesso do número de clarão. Bom contra um ataque por rodada.",
   "SDM.ItemFeature.frag": "despedaçar",
   "SDM.ItemFeature.fragAbbr": "desped",
@@ -898,8 +903,8 @@
   "SDM.ItemFeature.petrifying": "petrificante",
   "SDM.ItemFeature.petrifyingAbbr": "petrif",
   "SDM.ItemFeature.petrifyingDescription": "Faz o alvo sentir como se tivesse sido transformado em pedra. Salvaguarda permitida",
-  "SDM.ItemFeature.pocket": "bolso",
-  "SDM.ItemFeature.pocketAbbr": "bolso",
+  "SDM.ItemFeature.pocket": "bolso #",
+  "SDM.ItemFeature.pocketAbbr": "bolso #",
   "SDM.ItemFeature.pocketDescription": "Um bolso secreto, isto é. Esconde # carteiras",
   "SDM.ItemFeature.powered": "energizado",
   "SDM.ItemFeature.poweredAbbr": "energ",
@@ -913,8 +918,8 @@
   "SDM.ItemFeature.reach": "alcance",
   "SDM.ItemFeature.reachAbbr": "alc",
   "SDM.ItemFeature.reachDescription": "Mais longo, então ataca primeiro em combate corpo a corpo",
-  "SDM.ItemFeature.replenish": "recarga",
-  "SDM.ItemFeature.replenishAbbr": "re",
+  "SDM.ItemFeature.replenish": "recarga #",
+  "SDM.ItemFeature.replenishAbbr": "re #",
   "SDM.ItemFeature.replenishDescription": "Abstrai o número de balas ou outros recursos. Quando você rola o valor de recarga ou menos, os recursos acabam",
   "SDM.ItemFeature.restricted": "restrito",
   "SDM.ItemFeature.restrictedAbbr": "restr",
@@ -1144,6 +1149,8 @@
   "SDM.Notes": "Notas",
   "SDM.NpcCr": "ND",
   "SDM.NPCCreated": "NPC Randômico {name}, nível: {level} foi criado!",
+  "SDM.NPCLevelUp": "{name} passou para o nível {level}!",
+  "SDM.NPCLevelUpLimit": "{name} não pode ir além do nível {level}",
   "SDM.NPCTraitAdaptable": "Adaptável. Copia a última habilidade especial usada por um inimigo.",
   "SDM.NPCTraitBonded": "Vinculado. Gasta vida para conceder a um aliado bônus igual em sua próxima rolagem.",
   "SDM.NPCTraitCharger": "Arremetedor. Dano dobrado após uma carga direta.",
@@ -1716,12 +1723,15 @@
   "TYPES.Actor.caravan": "Caravana",
   "TYPES.Actor.character": "Personagem",
   "TYPES.Actor.npc": "NPC",
+  "TYPES.Item.affliction": "Aflição",
   "TYPES.Item.armor": "Armadura",
+  "TYPES.Item.augment": "Aprimoramento",
   "TYPES.Item.burden": "Fardo",
   "TYPES.Item.cash": "Dinheiro",
   "TYPES.Item.corruption": "Corrupção",
   "TYPES.Item.gear": "Equipamento",
   "TYPES.Item.mount": "Montaria",
+  "TYPES.Item.pet": "Companheiro",
   "TYPES.Item.power": "Poder",
   "TYPES.Item.power_album": "Álbum de Poderes",
   "TYPES.Item.skill": "Perícia",
