--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -270,6 +270,8 @@
   "SDM.BonusHeroDicePool": "Parada Bônus de Dados Heróicos",
   "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item para o estado danificado",
+  "SDM.Burden.CompletedSteps": "Etapas Completas",
+  "SDM.Burden.StepsToCure": "Etapas para Curar",
   "SDM.BurdenGenerator.AffectedAbility": "Atributo Afetado:",
   "SDM.BurdenGenerator.CreateButton": "Criar Fardo",
   "SDM.BurdenGenerator.ItemDescription": "<p>{penalty} {ability}</p>",
@@ -279,7 +281,7 @@
   "SDM.BurdenGenerator.RollResult": "Rolagem: {row},{col} → “{word}”",
   "SDM.BurdenGenerator.Title": "Gerador de Fardos",
   "SDM.BurdenGenerator.WindowTitle": "Gerar Fardo",
-  "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
+  "SDM.BurdensPenalty": "Cada fardo ou aflição penaliza todas as rolagens em -1",
   "SDM.BurdenTable.R1C1": "fratura",
   "SDM.BurdenTable.R1C2": "perna",
   "SDM.BurdenTable.R1C3": "dente",
@@ -436,7 +438,7 @@
   "SDM.CorruptionOutcome3to6": "Exposição severa.",
   "SDM.CorruptionOutcome7to10": "Exposição moderada.",
   "SDM.Cost": "Custo",
-  "SDM.CreateItemTypeAs": "Create {type} as",
+  "SDM.CreateItemTypeAs": "Criar {type} como",
   "SDM.CreateNPC": "Criar NPC",
   "SDM.CreateRandomCharacter": "Gerar Personagem",
   "SDM.CreateRandomNPC": "Gerar NPC",
@@ -523,11 +525,11 @@
   "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bônus em testes relacionados a Inteligência",
   "SDM.EffectsLabel.system.abilities.tho.roll_mode": "Tipo de rolagem padrão para inteligência e salvaguarda de int (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bônus para Salvaguarda de Inteligência",
-  "SDM.EffectsLabel.system.affliction_slots_bonus": "Number of afflictions that won't take either item or trait slots",
+  "SDM.EffectsLabel.system.affliction_slots_bonus": "Número de aflições que não ocupam espaços de itens ou traços",
   "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
   "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
   "SDM.EffectsLabel.system.attack_bonus": "Bônus para todos os ataques",
-  "SDM.EffectsLabel.system.augment_slots_bonus": "Number of augments that won't take either item or trait slots",
+  "SDM.EffectsLabel.system.augment_slots_bonus": "Número de aprimoramentos que não ocupam espaços de itens ou traços",
   "SDM.EffectsLabel.system.base_damage_multiplier": "Valor inicial do multiplicador de dado para acertos críticos",
   "SDM.EffectsLabel.system.blood_dice.bonus": "Dados de sangue extras (aumenta o número máximo de dados de sangue)",
   "SDM.EffectsLabel.system.blood_dice.dice_type": "Tipo de dado de sangue, substituir por: (d4, d6, d8, d10, d12 ou d20)",
@@ -552,7 +554,7 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "Bônus de ataque com velhatec",
   "SDM.EffectsLabel.system.oldtech.roll_mode": "Tipo de rolagem padrão para ataques de velhatec (sobrepor com: advantage ou disadvantage)",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Número de itens empacotados (não equipados) que não ocupam espaços",
-  "SDM.EffectsLabel.system.pet_slots_bonus": "Number of pets that won't take either item or trait slots",
+  "SDM.EffectsLabel.system.pet_slots_bonus": "Número de companheiros que não ocupam espaços de itens ou traços",
   "SDM.EffectsLabel.system.power_cost": "Custo de poderes",
   "SDM.EffectsLabel.system.power_cost_bonus": "Valor do bônus (número positivo) deduzido do custo total de todos os poderes",
   "SDM.EffectsLabel.system.power_slots_bonus": "Número de poderes que não ocupam espaços de itens ou traços",
@@ -797,7 +799,7 @@
   "SDM.ItemFeature.cavalryDescription": "Arma de uma mão para uso com montaria. Causa dano duplo quando em carga",
   "SDM.ItemFeature.charges": "cargas",
   "SDM.ItemFeature.chargesAbbr": "cargas",
-  "SDM.ItemFeature.chargesDescription": "O número exato de balas ou outro recurso em uma arma",
+  "SDM.ItemFeature.chargesDescription": "Registra o número exato de balas ou outro recurso em uma arma",
   "SDM.ItemFeature.clumsy": "desajeitado",
   "SDM.ItemFeature.clumsyAbbr": "desaj",
   "SDM.ItemFeature.clumsyDescription": "Penalidade em jogadas de ataque, obviamente",
