feat: :sparkles: Add option to drop an actor to link it to a pet item

--- a/lang/en.json
+++ b/lang/en.json
@@ -1185,6 +1185,7 @@
   "SDM.NPCTraitToolmaker": "Toolmaker. Improvise a weapon or tool in 1 round.",
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
+  "SDM.OpenPetSheet": "Open Pet Sheet",
   "SDM.OptionalField": "{field} (optional)",
   "SDM.Oracle.bell-2d10.10.description": "Barely negative outcome",
   "SDM.Oracle.bell-2d10.10.outcome": "No",
