--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -1185,6 +1185,7 @@
   "SDM.NPCTraitToolmaker": "Fazedor de ferramentas. Improvise uma arma ou ferramenta em 1 rodada.",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
+  "SDM.OpenPetSheet": "Abrir Ficha do Pet",
   "SDM.OptionalField": "{field} (opcional)",
   "SDM.Oracle.bell-2d10.10.description": "Resultado quase negativo",
   "SDM.Oracle.bell-2d10.10.outcome": "Não",
