feat: :sparkles: Added support to burdens as powers

--- a/lang/en.json
+++ b/lang/en.json
@@ -447,6 +447,9 @@
   "SDM.CriticalFailure": "Critical Failure",
   "SDM.CriticalSuccess": "Critical Success",
   "SDM.crystal-cannons": " Crystal Cannons",
+  "SDM.CurrencyWeigth.SingleStone": "single stone: every cash item takes 1 single stone",
+  "SDM.CurrencyWeigth.Standard": "standard: €250 = 1 stone",
+  "SDM.CurrencyWeigth.Weightless": "weightless: cash takes no item slots",
   "SDM.CustomInitiative": "Custom Initiative",
   "SDM.Damage": "Damage",
   "SDM.darting-dodgers": "Darting Dodgers",
@@ -743,6 +746,7 @@
   "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
+  "SDM.ItemBurdenType": "Burden Type",
   "SDM.ItemCharges": "Charges",
   "SDM.ItemCost": "Unit Cost (€)",
   "SDM.ItemCurrentCharges": "Current Charges",
@@ -884,6 +888,9 @@
   "SDM.ItemFeature.living": "living",
   "SDM.ItemFeature.livingAbbr": "living",
   "SDM.ItemFeature.livingDescription": "It’s alive. Feed it and it repair itself",
+  "SDM.ItemFeature.loud": "loud",
+  "SDM.ItemFeature.loudAbbr": "loud",
+  "SDM.ItemFeature.loudDescription": "Noisy. Louder than it should be. Much louder",
   "SDM.ItemFeature.lucent": "lucent",
   "SDM.ItemFeature.lucentAbbr": "lucent",
   "SDM.ItemFeature.lucentDescription": "Clear enough to let light and some attack beams through",
@@ -926,9 +933,6 @@
   "SDM.ItemFeature.resistant": "# resistant",
   "SDM.ItemFeature.resistantAbbr": "# resistant",
   "SDM.ItemFeature.resistantDescription": "Take half damage from one type of damage (e.g. fire, acid, necrotic)",
-  "SDM.ItemFeature.loud": "loud",
-  "SDM.ItemFeature.loudAbbr": "loud",
-  "SDM.ItemFeature.loudDescription": "Noisy. Louder than it should be. Much louder",
   "SDM.ItemFeature.restricted": "restricted",
   "SDM.ItemFeature.restrictedAbbr": "restricted",
   "SDM.ItemFeature.restrictedDescription": "Hard to find, overpriced, offen illegal. Zombies are such a thing",
@@ -1470,6 +1474,7 @@
   "SDM.Season.Summer": "Summer",
   "SDM.Season.Winter": "Winter",
   "SDM.seasonsStarsIntegrationError": "Make sure to install and enable the modules \"Seasons & Stars\" and \"Seasons & Stars: SDM\"",
+  "SDM.SelectAllCharacters": "Select All Characters",
   "SDM.SelectCharacter": "Select Character",
   "SDM.SelectResource": "Select Resource",
   "SDM.SetBonusHeroDice": "Set Bonus Hero Dice Pool",
@@ -1503,6 +1508,8 @@
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
+  "SDM.SettingsCurrencyWeight": "Currency Weight",
+  "SDM.SettingsCurrencyWeightHint": "Configures the rules for cash items weight",
   "SDM.SettingsDefaultHardLimitValue": "Hard Limit Value",
   "SDM.SettingsDefaultHardLimitValueHint": "Determines the maximum bonus allowed on d20 rolls",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
@@ -1582,6 +1589,7 @@
   "SDM.SplitHint": "Drag the slider or type a number. Totals must add up to the original quantity.",
   "SDM.SplitStackIntoTwo": "Split x{quantity} {item} Stack Into Two",
   "SDM.SplitStackTitle": "Split Stack: {item}",
+  "SDM.SplitTotalEvenly": "Split Total Evenly",
   "SDM.StatusBlind": "blind",
   "SDM.StatusEncumbered": "encumbered",
   "SDM.StatusOverloaded": "overloaded",
