--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -447,6 +447,9 @@
   "SDM.CriticalFailure": "Falha Crítica",
   "SDM.CriticalSuccess": "Sucesso Crítico",
   "SDM.crystal-cannons": "Canhões de Cristal",
+  "SDM.CurrencyWeigth.SingleStone": "mochila única: cada item de dinheiro ocupa 1 mochila independente da quantidade",
+  "SDM.CurrencyWeigth.Standard": "padrão: €250 = 1 mochila",
+  "SDM.CurrencyWeigth.Weightless": "sem peso: dinhero não ocupa espaço de inventário",
   "SDM.CustomInitiative": "Iniciativa Customizada",
   "SDM.Damage": "Dano",
   "SDM.darting-dodgers": "Fugitivos Velozes",
@@ -743,6 +746,7 @@
   "SDM.Item.View": "Visualizar",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
+  "SDM.ItemBurdenType": "Tipo de Fardo",
   "SDM.ItemCharges": "Cargas",
   "SDM.ItemCost": "Custo Unitário (€)",
   "SDM.ItemCurrentCharges": "Cargas Atuais",
@@ -884,6 +888,9 @@
   "SDM.ItemFeature.living": "vivo",
   "SDM.ItemFeature.livingAbbr": "vivo",
   "SDM.ItemFeature.livingDescription": "Está viva. Alimente-a e ela se repara",
+  "SDM.ItemFeature.loud": "barulhento",
+  "SDM.ItemFeature.loudAbbr": "barulhento",
+  "SDM.ItemFeature.loudDescription": "Ruidoso. Mais alto do que deveria. Muito mais alto",
   "SDM.ItemFeature.lucent": "translúcido",
   "SDM.ItemFeature.lucentAbbr": "translúcido",
   "SDM.ItemFeature.lucentDescription": "Transparente o suficiente para deixar passar luz e alguns feixes de ataque",
@@ -926,9 +933,6 @@
   "SDM.ItemFeature.resistant": "resistente #",
   "SDM.ItemFeature.resistantAbbr": "resistente #",
   "SDM.ItemFeature.resistantDescription": "Sofre metade do dano de um tipo de dano (ex: fogo, ácido, necrótico).",
-  "SDM.ItemFeature.loud": "barulhento",
-  "SDM.ItemFeature.loudAbbr": "barulhento",
-  "SDM.ItemFeature.loudDescription": "Ruidoso. Mais alto do que deveria. Muito mais alto",
   "SDM.ItemFeature.restricted": "restrito",
   "SDM.ItemFeature.restrictedAbbr": "restr",
   "SDM.ItemFeature.restrictedDescription": "Difícil de encontrar, superfaturado, muitas vezes ilegal. Zumbis são uma dessas coisas",
@@ -1191,7 +1195,7 @@
   "SDM.NPCTraitToolmaker": "Fazedor de ferramentas. Improvise uma arma ou ferramenta em 1 rodada.",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
-  "SDM.OpenPetSheet": "Abrir Ficha do Pet",
+  "SDM.OpenPetSheet": "Abrir Ficha do Companheiro",
   "SDM.OptionalField": "{field} (opcional)",
   "SDM.Oracle.bell-2d10.10.description": "Resultado quase negativo",
   "SDM.Oracle.bell-2d10.10.outcome": "Não",
@@ -1470,6 +1474,7 @@
   "SDM.Season.Summer": "Verão",
   "SDM.Season.Winter": "Inverno",
   "SDM.seasonsStarsIntegrationError": "É necessário instalar e habilitar os módulos \"Seasons & Stars\" e \"Seasons & Stars: SDM\"",
+  "SDM.SelectAllCharacters": "Selecionar Todos Personagens",
   "SDM.SelectCharacter": "Selecionar Personagem",
   "SDM.SelectResource": "Selecione o Recurso",
   "SDM.SetBonusHeroDice": "Modificar parada Bônus de Dados Heróicos",
@@ -1503,6 +1508,8 @@
   "SDM.SettingsCurrencyImgHint": "Imagem padrão usada pelo macro de transferência de dinheiro",
   "SDM.SettingsCurrencyName": "Nome da moeda",
   "SDM.SettingsCurrencyNameHint": "Nome padrão para a moeda do mundo",
+  "SDM.SettingsCurrencyWeight": "Peso do dinheiro",
+  "SDM.SettingsCurrencyWeightHint": "Configura as regras de peso para itens de dinheiro",
   "SDM.SettingsDefaultHardLimitValue": "Valor do Limite Máximo",
   "SDM.SettingsDefaultHardLimitValueHint": "Define o valor do bônus máximo permitido em rolagens de d20",
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
@@ -1582,6 +1589,7 @@
   "SDM.SplitHint": "Arraste o slider ou digite um número. Os totais devem somar a quantidade original.\n",
   "SDM.SplitStackIntoTwo": "Separar x{quantity} {item} em Duas Partes",
   "SDM.SplitStackTitle": "Separar Itens: {item}",
+  "SDM.SplitTotalEvenly": "Dividir Total Igualmente",
   "SDM.StatusBlind": "cego",
   "SDM.StatusEncumbered": "sobrecarregado",
   "SDM.StatusOverloaded": "sobrecarregado",
