--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -260,7 +260,7 @@
   "SDM.BackgroundSpin": "Ênfase",
   "SDM.BackgroundSwapOrder": "reordenar",
   "SDM.BackgroundTask": "Tarefa",
-  "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
+  "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} criado!",
   "SDM.Before": "Antes",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.BlindRoll": "Cega pro Mestre",
